--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@apollo/client": "^3.4.16",
 		"@emotion/react": "^11.5.0",
 		"@emotion/styled": "^11.3.0",
 		"@mui/material": "^5.0.4",
@@ -14,6 +15,7 @@
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
 		"@types/react-router-dom": "^5.3.1",
+		"graphql": "^15.6.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^5.3.0",
@@ -26,7 +28,8 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"gen": "graphql-codegen --config codegen.yml"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -45,5 +48,11 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"@graphql-codegen/cli": "2.2.1",
+		"@graphql-codegen/typescript-operations": "2.1.8",
+		"@graphql-codegen/typescript-react-apollo": "3.1.6",
+		"@graphql-codegen/typescript": "2.2.4"
 	}
 }
