--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
 		"@types/react-router-dom": "^5.3.1",
+		"emoji-picker-react": "^3.4.8",
 		"formik": "^2.2.9",
 		"graphql": "^15.6.1",
 		"react": "^17.0.2",
