--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"emoji-picker-react": "^3.4.8",
 		"formik": "^2.2.9",
 		"graphql": "^15.6.1",
+		"localstorage-slim": "^2.1.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
