--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"emoji-picker-react": "^3.4.8",
 		"formik": "^2.2.9",
 		"graphql": "^15.6.1",
+		"jwt-decode": "^3.1.2",
 		"localstorage-slim": "^2.1.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
@@ -31,7 +32,8 @@
 		"styled-components": "^5.3.3",
 		"typescript": "^4.1.2",
 		"web-vitals": "^1.0.1",
-		"yup": "^0.32.11"
+		"yup": "^0.32.11",
+		"zustand": "^3.6.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
