--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
 		"styled-components": "^5.3.3",
+		"sweetalert2": "^11.1.9",
+		"sweetalert2-react-content": "^4.2.0",
 		"typescript": "^4.1.2",
 		"web-vitals": "^1.0.1",
 		"yup": "^0.32.11",
