--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
 		"@types/react-router-dom": "^5.3.1",
+		"axios": "^0.24.0",
 		"emoji-picker-react": "^3.4.8",
 		"formik": "^2.2.9",
 		"graphql": "^15.6.1",
