Added ImageUpload and DateTimePicker components. Also successfully completed adding event UI and logic with uploading image to cloudinary.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
 	"private": true,
 	"dependencies": {
 		"@apollo/client": "^3.4.16",
+		"@date-io/date-fns": "^2.11.0",
 		"@emotion/react": "^11.5.0",
 		"@emotion/styled": "^11.3.0",
 		"@mui/icons-material": "^5.0.5",
+		"@mui/lab": "^5.0.0-alpha.54",
 		"@mui/material": "^5.0.4",
 		"@mui/styles": "^5.0.1",
 		"@rooks/use-outside-click": "^4.11.2",
@@ -19,6 +21,7 @@
 		"@types/react-dom": "^17.0.0",
 		"@types/react-router-dom": "^5.3.1",
 		"axios": "^0.24.0",
+		"date-fns": "^2.25.0",
 		"emoji-picker-react": "^3.4.8",
 		"formik": "^2.2.9",
 		"graphql": "^15.6.1",
@@ -27,6 +30,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
+		"react-images-upload": "^1.2.8",
 		"react-lottie": "^1.2.3",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
