--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
 		"react-images-upload": "^1.2.8",
+		"react-lines-ellipsis": "^0.15.0",
 		"react-lottie": "^1.2.3",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
@@ -73,6 +74,7 @@
 		"@graphql-codegen/typescript-operations": "2.1.8",
 		"@graphql-codegen/typescript-react-apollo": "3.1.6",
 		"@types/react-helmet": "^6.1.4",
+		"@types/react-lines-ellipsis": "^0.15.0",
 		"@types/react-lottie": "^1.2.6"
 	}
 }
