--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"react-lottie": "^1.2.3",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
+		"react-slick": "^0.28.1",
 		"styled-components": "^5.3.3",
 		"sweetalert2": "^11.1.9",
 		"sweetalert2-react-content": "^4.2.0",
@@ -75,6 +76,7 @@
 		"@graphql-codegen/typescript-react-apollo": "3.1.6",
 		"@types/react-helmet": "^6.1.4",
 		"@types/react-lines-ellipsis": "^0.15.0",
-		"@types/react-lottie": "^1.2.6"
+		"@types/react-lottie": "^1.2.6",
+		"@types/react-slick": "^0.23.7"
 	}
 }
