--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"localstorage-slim": "^2.1.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-graceful-image": "^1.5.0",
 		"react-helmet": "^6.1.0",
 		"react-images-upload": "^1.2.8",
 		"react-lines-ellipsis": "^0.15.0",
