--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
 		"react-slick": "^0.28.1",
+		"slick-carousel": "^1.8.1",
 		"styled-components": "^5.3.3",
 		"sweetalert2": "^11.1.9",
 		"sweetalert2-react-content": "^4.2.0",
